@@ -1,3 +1,9 @@
+2004-01-28 Jens Tkotz <jens@peino.de> 1.4.2-RC2-cvs-b5
+
+	* Bugfix: In javascript in the 2nd parameter (name) 
+		  in window.open are no spaces allowed.
+		  NS doesnt care. IE does and result an error when trying to print via Fotokasten.
+
 2004-01-28 Jens Tkotz <jens@peino.de> 1.4.2-RC2-cvs-b4
 
 	* Bugfix: The Radiobutton for Shutterflys Donation is set always.
